# learn-web-api

./: .gitignore  Dockerfile  README.md  TODOテスト.postman_collection.json  startup.sh
book/: webAPITheGoodParts_2章まとめ.md  webAPITheGoodParts_3章まとめ.md  webAPITheGoodParts_4章まとめ.md  webAPITheGoodParts_5章まとめ.md  webAPITheGoodParts_6章まとめ.md
todo-app/server/: .env  Cargo.toml
todo-app/server/migrations/2022-07-09-105243_create_todos/: up.sql
todo-app/server/src/: app_config.rs  db_connection.rs  lib.rs  main.rs  models.rs  schema.rs
todo-app/server/src/handlers/: todos.rs
todo-app/server/src/repositories/: todo_repository.rs
